--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="Descripcion"
-      content="La nueva aplicacion de administracion de tesis online"
+      content="XDT DOMOHOME"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/img/title.svg" />
     <!--
@@ -37,7 +37,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>UES-FMO T-Mngr</title>
+    <title>XDT Domohome</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
