programacion de acciones

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="/css/materialize.css">
     <!-- CSS -->
     <link rel="stylesheet" href="/css/mstepper.css">
+    <link rel="stylesheet" href="/css/introjs-dark.css">
     <link href="/css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
     
     <meta name="viewport" content="width=device-width, initial-scale=1" />
