--- a/public/index.html
+++ b/public/index.html
@@ -11,11 +11,11 @@
 
     <!-- Compiled and minified CSS -->
     <!-- ATENCION, COLOCAR UNA PLECA AL INICIO DE CADA IMPORT PARA EVITAR CIERTO BUG-->
-    <link rel="stylesheet" href="/css/materialize.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/materialize.css">
     <!-- CSS -->
-    <link rel="stylesheet" href="/css/mstepper.css">
-    <link rel="stylesheet" href="/css/introjs-dark.css">
-    <link href="/css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/mstepper.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/introjs-dark.css">
+    <link href="%PUBLIC_URL%/css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
     
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
